--- a/labs/gender-analysis.ipynb
+++ b/labs/gender-analysis.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## History \n",
     "\n",
-    "This data set was used to train a CrowdFlower AI gender predictor. Contributors were asked to simply view a Twitter profile and judge whether the user was a male, a female, or a brand (non-individual). The dataset contains 20,000 rows, each with a user name, a random tweet, account profile and image, location, and even link and sidebar color.\n",
+    "<img src='../hello.png'></img>This data set was used to train a CrowdFlower AI gender predictor. Contributors were asked to simply view a Twitter profile and judge whether the user was a male, a female, or a brand (non-individual). The dataset contains 20,000 rows, each with a user name, a random tweet, account profile and image, location, and even link and sidebar color.\n",
     "\n",
     "Sources: \n",
     "* https://www.crowdflower.com/data-for-everyone/\n",
